--- a/Tpl/Admin/Default/Common/incMenu.html
+++ b/Tpl/Admin/Default/Common/incMenu.html
@@ -1,13 +1,17 @@
-<div id="mainMenu" class="main-menu">
-    <ul id="sort_dashboard" style="display: block;">
-        <li>
-            <dl>
-                <dd>
-                    <ol>
-                        <li nc_type=""><a href="JavaScript:void(0);" name="item_welcome" id="item_welcome" onclick="openItem(&#39;welcome,dashboard,dashboard&#39;);" class="selected">欢迎页面</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_aboutus" id="item_aboutus" onclick="openItem(&#39;aboutus,dashboard,dashboard&#39;);" class="">关于我们</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_base_information" id="item_base_information" onclick="openItem(&#39;base_information,setting,dashboard&#39;);" class="">站点设置</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_member" id="item_member" onclick="openItem(&#39;member,member,dashboard&#39;);" class="">会员管理</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_store" id="item_store" onclick="openItem(&#39;store,store,dashboard&#39;);" class="">店铺管理</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_goods" id="item_goods" onclick="openItem(&#39;goods,goods,dashboard&#39;);" class="">商品管理</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_order_manage" id="item_order_manage" onclick="openItem(&#39;order_manage,trade,dashboard&#39;);" class="">订单管理</a></li>
-                    </ol>
-                </dd>
-            </dl>
-        </li>
-    </ul>
+<div id="sliderNavBox" class="sliderNavBox">
+    <div id="mainMenu" class="main-menu">
+        <ul id="sort_dashboard" style="display: block;">
+            <li>
+                <dl>
+                    <dd>
+                        <ol>
+                            <li nc_type="">
+                                <a href="JavaScript:void(0);" name="item_welcome" id="item_welcome" onclick="openItem(&#39;welcome,dashboard,dashboard&#39;);" class="selected">欢迎页面</a>
+                            </li>
+                        </ol>
+                    </dd>
+                </dl>
+            </li>
+        </ul>
+    </div>
 </div>
