--- a/branches/2.1/Tpl/Admin/Default/Common/incHeader.html
+++ b/branches/2.1/Tpl/Admin/Default/Common/incHeader.html
@@ -3,7 +3,7 @@
     <div id="topnav" class="top-nav">
         <ul>
             <li class="adminid" title="{$Think.session.admin_name}">登陆者&nbsp;:&nbsp;<strong>{$Think.session.admin_name}</strong></li>
-            <li><a href="{:U('Admin/System/pageEditAdminPasswd')}" target="workspace"><span>修改密码</span></a></li>
+            <li><a href="{:U('Admin/System/pageEditAdminPasswd')}"><span>修改密码</span></a></li>
             <li><a href="{:U('Admin/User/doLogout')}" title="退出"><span>退出</span></a></li>
             <li><a href="/" target="_blank" title="前台"><span>前台</span></a></li>
         </ul>
@@ -17,7 +17,7 @@
             </li>
             <volist name="tops" id="nav">
             <li>
-                <a class="link" id="nav_setting" href="javascript:;" onclick="openItem(&#39;setting&#39;);">
+                <a class="link" id="nav_setting" href="javascript:;">
                     <span>{$nav.name}</span>
                 </a>
             </li>
@@ -33,7 +33,8 @@
             <li id="skin_0" class="" title="默认风格"></li>
             <li id="skin_1" class="" title="Mac风格"></li>
         </ul>
-        <div class="sitemap"><a id="siteMapBtn" href="http://www.shopnctest.com/huli/index.php#rhis" onclick="showBg(&#39;dialog&#39;,&#39;dialog_content&#39;);"><span>管理地图</span></a></div>
+        <div class="sitemap">
+            <a id="siteMapBtn" href="javascript:void(0);" onclick=""><span>管理地图</span></a></div>
         <div class="toolmenu"><span class="bar-btn"></span>
             <ul class="bar-list" style="display: none;">
                 <li><a onclick="openItem(&#39;clear,cache,setting&#39;);" href="javascript:void(0)">更新站点缓存</a></li>
