--- a/Tpl/Admin/Default/Index/demo.html
+++ b/Tpl/Admin/Default/Index/demo.html
@@ -1,3 +1,8 @@
+<script type="text/javascript">
+    window.UEDITOR_HOME_URL = "__PUBLIC__/Lib/ueditor/";
+</script>
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/Lib/ueditor/editor_all.js"></script>
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/Lib/ueditor/editor_config.js"></script>
 <div class="rounded table" style="width: 98%;">
     <table width="100%" cellpadding="0" cellspacing="0" border="0" class="box_top">
         <thead class="thead">
@@ -84,6 +89,15 @@
                     <td class="field"></td>
                 </tr>
                 <tr class="even">
+                    <td class="name">内容页模板文件：</td>
+                    <td>
+                        <input type="text" class="input rounded" name="photo" id="photo" size="30" value="" style="float: left;">  
+                        <a href="javascript:upImage('photo');" id="button1" value="" class="type-file-button"></a>
+
+                    </td>
+                    <td class="field"><img title="该栏目下的内容页所使用的模板文件名称。多级分类时将采用最后一级&lt;br /&gt;分类填写的内页模板文件。不填写将会继承父级栏目中设定的模板文件。" class="title2div" src="__PUBLIC__/Admin/images/icons/icon_help.png" width="16" height="16"></td>
+                </tr>
+                <tr class="even">
                     <td class="name">栏目介绍：</td>
                     <td>
                         <textarea name="introduction" class="rounded" style="width:300px; height:60px; padding:5px;"></textarea> 
@@ -114,4 +128,45 @@
             </tbody>
         </table>
     </form>
+    <a href="#" style="color:#000" onclick="showWin();return false">打开新对话框</a>
 </div>
+
+<script>
+    //显示一个新对话框
+    function showWin(){
+        artDialog({
+            content:'欢迎使用 "artDialog" 对话框组件！', 
+            fixed:true, 
+            lock:false,
+            style:'succeed'
+        }, function(){
+            artDialog({
+                title:' ', 
+                content:'谢谢观赏', 
+                lock:true, 
+                time:2
+            })
+        });
+    };    
+    //Ueditor上传 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+    var dom;
+    var editor = new UE.ui.Editor({
+        imageRealPath:"images"
+    });
+    editor.render("myEditor");
+    var dialog_img;
+    editor.ready(function(){
+        editor.hide();
+        dialog_img = editor.getDialog("insertimage");
+        editor.addListener('beforeInsertImage',function(t, arg){
+            $("#"+dom).val(arg[0]['src']);
+        });
+        editor.addListener('afterUpfile',function(t, arg){
+            $("#"+dom).val(arg[0]['url']);
+        });
+    });
+    function upImage(pid) {
+        dom = pid;
+        dialog_img.open();
+    }
+</script>
