--- a/Tpl/Admin/Default/RoleNode/pageList.html
+++ b/Tpl/Admin/Default/RoleNode/pageList.html
@@ -1,33 +1,37 @@
-<div class="contentcontainer">
-    <div class="headings altheading">
-        <h2>节点列表</h2>
-    </div>
+<div class="rounded table" style="width: 98%;">
+    <table width="100%" cellpadding="0" cellspacing="0" border="0" class="box_top">
+        <thead class="thead">
+            <tr class="space">
+                <th colspan="10">节点列表</th>
+            </tr>
+        </thead>
+    </table>
     <div class="contentbox" data-uri='{:U("Admin/RoleNode/doEditStatus")}'>
         <table width="100%" class="list td_align">
             <thead>
-                <tr class="even">
-                    <td class="field_head"><input name="u_id" type="checkbox" id="checkboxall" /></td>
-                    <td class="field_head">编号</td>
-                    <td class="field_head">操作</td>
-                    <td class="field_head">操作名称</td>
-                    <td class="field_head">模块</td>
-                    <td class="field_head">模块名称</td>
-                    <td class="field_head">授权类型</td>
-                    <td class="field_head">状态</td>
-                    <td class="field_head">操作</td>
+                <tr class="even thead">
+                    <th class="align-center"><input name="u_id" type="checkbox" id="checkboxall" /></th>
+                    <th class="align-center">编号</th>
+                    <th class="">操作</th>
+                    <th class="">操作名称</th>
+                    <th class="">模块</th>
+                    <th class="">模块名称</th>
+                    <th class="align-center">授权类型</th>
+                    <th class="align-center">状态</th>
+                    <th class="align-center">操作</th>
                 </tr>
             </thead>
             <tbody>
             <volist name="data" id="list">
                 <tr id="list_{$list.id}">
-                    <td><input type="checkbox" name="id" value="" /></td>
-                    <td>{$list.id}</td>
+                    <td class="align-center"><input type="checkbox" name="id" value="" /></td>
+                    <td class="align-center">{$list.id}</td>
                     <td style="text-align: left;">{$list.action}</td>
-                    <td>{$list.action_name}</td>
-                    <td>{$list.module}</td>
-                    <td>{$list.module_name}</td>
-                    <td><if condition="$list.auth_type eq '1'">模块授权<elseif condition="$list.auth_type eq '2'" />操作授权<else />节点授权</if></td>
-                    <td>
+                    <td class="">{$list.action_name}</td>
+                    <td class="">{$list.module}</td>
+                    <td class="">{$list.module_name}</td>
+                    <td class="align-center"><if condition="$list.auth_type eq '1'">模块授权<elseif condition="$list.auth_type eq '2'" />操作授权<else />节点授权</if></td>
+                    <td class="align-center">
                         <img class="pointer" data-id="{$list[id]}" style="cursor: pointer;" data-field="status" data-value="{$list.status}"
                                 <if condition="$list.status eq '1'">
                                     src="__PUBLIC__/Admin/images/icons/icon_1.png" alt="启用" title="启用"
@@ -37,7 +41,7 @@
                             />
 <!--                        <img data-id="{$list[id]}" data-field="status" data-value="{$list.status}" src="__PUBLIC__/Admin/images/status-{$list.status}.gif"<if condition="$list.status eq '1'"> title="启用"<else /> title="停用"</if> class="pointer" />-->
                     </td>
-                    <td>
+                    <td class="align-center">
                         <a href='{:U("Admin/RoleNode/editRoleNode?id=$list[id]")}'><img src="__PUBLIC__/Admin/images/icons/icon_edit.png" alt="编辑" title="编辑" /></a>&nbsp;
                         <a href='javascript:;' class="dodel" data-uri='{:U("Admin/RoleNode/doDelete","id=$list[id]")}' val="{$list[id]}" data-msg="确定要删除“{$list.name}”吗？" data-acttype="ajax"><img src="__PUBLIC__/Admin/images/icons/icon_square_close.png" alt="删除" title="删除" /></a>
                     </td>
@@ -48,20 +52,21 @@
             </empty>
             </tbody>
         </table>
-        <ul class="pagination">
-            {$page}
-            <select name="pageall" onChange="window.location.href=this.value">
-                <option value='{:U("Admin/RoleNode/pageList","pageall=1")}' <if condition="$filter.pageall eq '1'">selected="selected"</if>>1条/页</option>
-                <option value='{:U("Admin/RoleNode/pageList","pageall=5")}' <if condition="$filter.pageall eq '5'">selected="selected"</if>>5条/页</option>
-                <option value='{:U("Admin/RoleNode/pageList","pageall=10")}'<if condition="$filter.pageall eq '10'">selected="selected"</if>>10条/页</option>
-                <option value='{:U("Admin/RoleNode/pageList","pageall=20")}'<if condition="$filter.pageall eq '20'">selected="selected"</if>>20条/页</option>
-                <option value='{:U("Admin/RoleNode/pageList","pageall=50")}'<if condition="$filter.pageall eq '50'">selected="selected"</if>>50条/页</option>
-                <option value='{:U("Admin/RoleNode/pageList","pageall=80")}'<if condition="$filter.pageall eq '80'">selected="selected"</if>>80条/页</option>
-                <option value='{:U("Admin/RoleNode/pageList","pageall=100")}'<if condition="$filter.pageall eq '100'">selected="selected"</if>>100条/页</option>
-                <option value='{:U("Admin/RoleNode/pageList","pageall=500")}'<if condition="$filter.pageall eq '500'">selected="selected"</if>>500条/页</option>
-            </select>
-        </ul>
-
+        <div class="pagination">
+            <ul>
+                {$page}
+                <select name="pageall" onChange="window.location.href=this.value">
+                    <option value='{:U("Admin/RoleNode/pageList","pageall=1")}' <if condition="$filter.pageall eq '1'">selected="selected"</if>>1条/页</option>
+                    <option value='{:U("Admin/RoleNode/pageList","pageall=5")}' <if condition="$filter.pageall eq '5'">selected="selected"</if>>5条/页</option>
+                    <option value='{:U("Admin/RoleNode/pageList","pageall=10")}'<if condition="$filter.pageall eq '10'">selected="selected"</if>>10条/页</option>
+                    <option value='{:U("Admin/RoleNode/pageList","pageall=20")}'<if condition="$filter.pageall eq '20'">selected="selected"</if>>20条/页</option>
+                    <option value='{:U("Admin/RoleNode/pageList","pageall=50")}'<if condition="$filter.pageall eq '50'">selected="selected"</if>>50条/页</option>
+                    <option value='{:U("Admin/RoleNode/pageList","pageall=80")}'<if condition="$filter.pageall eq '80'">selected="selected"</if>>80条/页</option>
+                    <option value='{:U("Admin/RoleNode/pageList","pageall=100")}'<if condition="$filter.pageall eq '100'">selected="selected"</if>>100条/页</option>
+                    <option value='{:U("Admin/RoleNode/pageList","pageall=500")}'<if condition="$filter.pageall eq '500'">selected="selected"</if>>500条/页</option>
+                </select>
+            </ul>
+        </div>
         <div style="clear: both;"></div>
     </div>
 
