--- a/Tpl/Admin/Default/System/pageList.html
+++ b/Tpl/Admin/Default/System/pageList.html
@@ -1,76 +1,67 @@
-<div class="contentcontainer">
-    <div class="headings altheading">
-        <h2>管理员列表</h2>
-    </div>
+<div class="rounded table" style="width: 98%;">
+    <table width="100%" cellpadding="0" cellspacing="0" border="0" class="box_top">
+        <thead class="thead">
+            <tr class="space">
+                <th colspan="10">管理员列表</th>
+            </tr>
+        </thead>
+    </table>
     <div class="contentbox" data-uri='{:U("Admin/System/doEditStatus")}'>
         <table width="100%" class="list td_align">
             <thead>
-<!--                <tr>
-                    <th><input name="u_id" type="checkbox" id="checkboxall" /></th>
-                    <th>操作</th>
-                    <th>头像</th>
-                    <th>管理员帐号</th>
-                    <th>所属组</th>
-                    <th>最后登录时间</th>
-                    <th>最后登录IP</th>
-                    <th>登录次数</th>
-                    <th>创建时间</th>
-                    <th>更新时间</th>
-                    <th>状态</th>
-                </tr>-->
-                <tr class="even">
-                    <td class="field_head"><input name="u_id" type="checkbox" id="checkboxall" /></td>
-                    <td class="field_head">操作</td>
-                    <td class="field_head">头像</td>
-                    <td class="field_head">管理员帐号</td>
-                    <td class="field_head">所属组</td>
-                    <td class="field_head">最后登录时间</td>
-                    <td class="field_head">最后登录IP</td>
-                    <td class="field_head">登录次数</td>
-                    <td class="field_head">创建时间</td>
-                    <td class="field_head">更新时间</td>
-                    <td class="field_head">状态</td>
+                <tr class="even thead">
+                    <th class="align-center"><input name="u_id" type="checkbox" id="checkboxall" /></th>
+                    <th class="align-center">操作</th>
+                    <th class="align-center">头像</th>
+                    <th class="align-center">管理员帐号</th>
+                    <th class="align-center">所属组</th>
+                    <th class="align-center">最后登录时间</th>
+                    <th class="align-center">最后登录IP</th>
+                    <th class="align-center">登录次数</th>
+                    <th class="align-center">创建时间</th>
+                    <th class="align-center">更新时间</th>
+                    <th class="align-center">状态</th>
                 </tr>
             </thead>
             <tbody>
             <volist name="data" id="vo">
                 <tr id="list_{$vo.u_id}">
-                    <td class="center"><input type="checkbox" value="{$vo.u_id}" name="checkall" class="checkSon" /></td>
-                    <td class="center">
+                    <td class="align-center"><input type="checkbox" value="{$vo.u_id}" name="checkall" class="checkSon" /></td>
+                    <td class="align-center">
                         <a href='{:U("Admin/System/pageEditAdmin","uid=$vo[u_id]")}' title="编辑"><img src="__PUBLIC__/Admin/images/icons/icon_edit.png" alt="编辑" title="编辑" /></a>
-                        <if condition="$vo.u_name neq $admin[SYS_ADMIN]">
-                            <a href="javascript:void(0);" title="删除" class="dodel" val="{$vo.u_id}" data-uri='{:U("Admin/System/doDelete","uid=$vo[u_id]")}' data-acttype="ajax"><img src="__PUBLIC__/Admin/images/icons/icon_square_close.png" alt="删除" title="删除" /></a>
-                        </if>
-                    </td>
-                    <td class="center">
-                        <img src="{$vo.u_photo|default='__PUBLIC__/Admin/images/avatar.png'}" width="44" height="44" />
-                    </td>
-                    <td class="center">{$vo.u_name}</td>
+                <if condition="$vo.u_name neq $admin[SYS_ADMIN]">
+                    <a href="javascript:void(0);" title="删除" class="dodel" val="{$vo.u_id}" data-uri='{:U("Admin/System/doDelete","uid=$vo[u_id]")}' data-acttype="ajax"><img src="__PUBLIC__/Admin/images/icons/icon_square_close.png" alt="删除" title="删除" /></a>
+                </if>
+                </td>
+                <td class="align-center">
+                    <img src="{$vo.u_photo|default='__PUBLIC__/Admin/images/avatar.png'}" width="44" height="44" />
+                </td>
+                <td class="align-center">{$vo.u_name}</td>
 
-                    <td class="center">
-                        <if condition="$vo.u_name eq $admin[SYS_ADMIN]">
-                            系统管理员
-                            <else />    
-                            {$vo.name}
-                        </if>
+                <td class="align-center">
+                <if condition="$vo.u_name eq $admin[SYS_ADMIN]">
+                    系统管理员
+                    <else />    
+                    {$vo.name}
+                </if>
 
-                    </td>
+                </td>
 
-                    <td class="center">{$vo.u_lastlogin_time}</td>
-                    <td class="center">{$vo.u_ip|default="暂无"}</td>
-                    <td class="center">{$vo.u_countlog}</td>
-                    <td class="center">{$vo.u_create_time}</td>
-                    <td class="center">{$vo.u_update_time}</td>
-                    <td class="center">
-                            <img class="pointer" data-id="{$vo[u_id]}" style="cursor: pointer;" data-field="u_status" data-value="{$vo.u_status}"
-                                <if condition="$vo.u_status eq '1'">
-                                    src="__PUBLIC__/Admin/images/icons/icon_1.png" alt="启用" title="启用"
-                                <else />
-                                    src="__PUBLIC__/Admin/images/icons/icon_0.png" alt="停用" title="停用"
-                                </if> 
-                            />
-                        </if>
-                    </td>
+                <td class="align-center">{$vo.u_lastlogin_time}</td>
+                <td class="align-center">{$vo.u_ip|default="暂无"}</td>
+                <td class="align-center">{$vo.u_countlog}</td>
+                <td class="align-center">{$vo.u_create_time}</td>
+                <td class="align-center">{$vo.u_update_time}</td>
+                <td class="align-center">
+                    <img class="pointer" data-id="{$vo[u_id]}" style="cursor: pointer;" data-field="u_status" data-value="{$vo.u_status}"
+                <if condition="$vo.u_status eq '1'">
+                    src="__PUBLIC__/Admin/images/icons/icon_1.png" alt="启用" title="启用"
+                    <else />
+                    src="__PUBLIC__/Admin/images/icons/icon_0.png" alt="停用" title="停用"
+                </if> 
+                />
+                </if>
+                </td>
                 </tr>
             </volist>
             <empty name="data">
@@ -78,33 +69,22 @@
             </empty>
             </tbody>
         </table>
-        <!--        <div class="extrabottom">
-                    <ul>
-                        <li><img src="__PUBLIC__/Admin/images/icons/icon_edit.png" alt="Edit" /> 编辑</li>
-                        <li><img src="__PUBLIC__/Admin/images/icons/icon_approve.png" alt="Approve" /> 启用</li>
-                        <li><img src="__PUBLIC__/Admin/images/icons/icon_unapprove.png" alt="Unapprove" /> 停用</li>
-                        <li><img src="__PUBLIC__/Admin/images/icons/icon_delete.png" alt="Delete" /> 删除</li>
-                    </ul>
-                    <div class="bulkactions">
-                        <select>
-                            <option>请选择</option>
-                        </select>
-                        <input type="submit" value="应用" class="btn" />
-                    </div>
-                </div>-->
-        <ul class="pagination">
-            {$page}
-            <select name="pageall" onChange="window.location.href=this.value">
-                <option value='{:U("Admin/System/pageList","pageall=1")}' <if condition="$filter.pageall eq '1'">selected="selected"</if>>1条/页</option>
-                <option value='{:U("Admin/System/pageList","pageall=5")}' <if condition="$filter.pageall eq '5'">selected="selected"</if>>5条/页</option>
-                <option value='{:U("Admin/System/pageList","pageall=10")}'<if condition="$filter.pageall eq '10'">selected="selected"</if>>10条/页</option>
-                <option value='{:U("Admin/System/pageList","pageall=20")}'<if condition="$filter.pageall eq '20'">selected="selected"</if>>20条/页</option>
-                <option value='{:U("Admin/System/pageList","pageall=50")}'<if condition="$filter.pageall eq '50'">selected="selected"</if>>50条/页</option>
-                <option value='{:U("Admin/System/pageList","pageall=80")}'<if condition="$filter.pageall eq '80'">selected="selected"</if>>80条/页</option>
-                <option value='{:U("Admin/System/pageList","pageall=100")}'<if condition="$filter.pageall eq '100'">selected="selected"</if>>100条/页</option>
-                <option value='{:U("Admin/System/pageList","pageall=500")}'<if condition="$filter.pageall eq '500'">selected="selected"</if>>500条/页</option>
-            </select>
-        </ul>
+        <div class="pagination">
+            <ul>
+                {$page}
+                <select name="pageall" onChange="window.location.href=this.value">
+                    <option value='{:U("Admin/System/pageList","pageall=1")}' <if condition="$filter.pageall eq '1'">selected="selected"</if>>1条/页</option>
+                    <option value='{:U("Admin/System/pageList","pageall=5")}' <if condition="$filter.pageall eq '5'">selected="selected"</if>>5条/页</option>
+                    <option value='{:U("Admin/System/pageList","pageall=10")}'<if condition="$filter.pageall eq '10'">selected="selected"</if>>10条/页</option>
+                    <option value='{:U("Admin/System/pageList","pageall=20")}'<if condition="$filter.pageall eq '20'">selected="selected"</if>>20条/页</option>
+                    <option value='{:U("Admin/System/pageList","pageall=50")}'<if condition="$filter.pageall eq '50'">selected="selected"</if>>50条/页</option>
+                    <option value='{:U("Admin/System/pageList","pageall=80")}'<if condition="$filter.pageall eq '80'">selected="selected"</if>>80条/页</option>
+                    <option value='{:U("Admin/System/pageList","pageall=100")}'<if condition="$filter.pageall eq '100'">selected="selected"</if>>100条/页</option>
+                    <option value='{:U("Admin/System/pageList","pageall=500")}'<if condition="$filter.pageall eq '500'">selected="selected"</if>>500条/页</option>
+                </select>
+            </ul>
+        </div>
+
 
         <div style="clear: both;"></div>
     </div>
@@ -168,9 +148,9 @@
                     if(msgObj.status == '1'){
                         $("#J_ajax_loading").removeClass('ajax_error').addClass('ajax_success').html(msgObj.info).show().fadeOut(5000);
                         if(s_src.indexOf('0')>-1) {
-                                $(img).attr({'src':s_src.replace('0','1'),'data-value':s_val,'title':s_msg,'alt':s_msg});
+                            $(img).attr({'src':s_src.replace('0','1'),'data-value':s_val,'title':s_msg,'alt':s_msg});
                         } else {
-                                $(img).attr({'src':s_src.replace('1','0'),'data-value':s_val,'title':s_msg,'alt':s_msg});
+                            $(img).attr({'src':s_src.replace('1','0'),'data-value':s_val,'title':s_msg,'alt':s_msg});
                         }
                     }else{
                         $("#J_ajax_loading").removeClass('ajax_success').addClass('ajax_error').html(msgObj.info).show().fadeOut(5000);
