--- a/Tpl/Admin/Default/layout.html
+++ b/Tpl/Admin/Default/layout.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
     <include file="Common:incTop" />
     <body style="margin: 0px;">
         <div id="head" class="head mainhd">
